# fimeval

./: README.md  pyproject.toml
.github/workflows/: python-publish.yml
docs/: fimeval_usage.ipynb
src/fimeval/: __init__.py  utilis.py
src/fimeval/BuildingFootprint/: evaluationwithBF.py
src/fimeval/ContingencyMap/: PWBs3.py  __init__.py  evaluationFIM.py  fix_permissions.sh  methods.py  metrics.py  printcontingency.py
src/fimpef/: __init__.py
src/fimpef/BuildingFootprint/: __init__.py  evaluationwithBF.py
src/fimpef/ContingencyMap/: PWBs3.py  evaluationFIM.py  plotevaluationmetrics.py
tests/: test_evaluationfim.py
